--- a/style.css
+++ b/style.css
@@ -67,6 +67,16 @@ header {
 	width: 125px;
 }
 
+.classification-image {
+    display: block;
+    margin-top: 10px;
+    max-width: 135px;
+    height: auto;
+    border-radius: 4px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+    float: left; /* Alignement à gauche */
+}
+
 h1 {
 	margin: 0;
 }
@@ -118,3 +128,4 @@ h1 {
 	color: #666;
 	padding: 5px 10px;
 }
+
