--- a/style.css
+++ b/style.css
@@ -44,28 +44,6 @@ header {
 		justify-content: space-around !important; /*space-between;*/
 	}
 }
-
-@media (max-width: 600px) {
-  .card {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .poster {
-    width: 100%;
-    padding: 0;
-  }
-
-  .poster > img {
-    width: 100%;
-    max-width: 200px;
-  }
-
-  .synopsis {
-    font-size: 14px;
-  }
-}
-
 .badge {
 	background-color: #eee;
 	color: #666;
@@ -153,3 +131,40 @@ h1 {
 
 
 
+/* Responsive adjustments for small screens */
+@media (max-width: 600px) {
+  .card {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .poster {
+    width: 100%;
+    padding: 0;
+  }
+
+  .poster > img {
+    width: 100%;
+    max-width: 200px;
+    height: auto;
+  }
+
+  .synopsis {
+    font-size: 14px;
+  }
+
+  body {
+    padding: 1rem;
+  }
+
+  main {
+    padding: 0 1rem 1rem 1rem;
+  }
+}
+
+/* Flexible units for poster images */
+.poster > img {
+  width: 100%;
+  max-width: 125px;
+  height: auto;
+}
