--- a/style.css
+++ b/style.css
@@ -129,21 +129,39 @@ h1 {
 	padding: 5px 10px;
 }
 
+.poster, .classification-image {
+  display: block;
+  min-width: 135px;
+  width: 100%;
+}
 
+.poster > img, .classification-image > img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
 
-/* Responsive adjustments for small screens */
 @media (max-width: 600px) {
+  body {
+    padding: 1rem;
+  }
+
+  main {
+    padding: 0;
+  }
+
   .card {
     flex-direction: column;
     align-items: center;
   }
 
-  .poster {
+  .poster, .classification-image {
     width: 100%;
+    min-width: 135px;
     padding: 0;
   }
 
-  .poster > img {
+  .poster > img, .classification-image > img {
     width: 100%;
     max-width: 200px;
     height: auto;
@@ -152,19 +170,4 @@ h1 {
   .synopsis {
     font-size: 14px;
   }
-
-  body {
-    padding: 1rem;
-  }
-
-  main {
-    padding: 0 1rem 1rem 1rem;
-  }
-}
-
-/* Flexible units for poster images */
-.poster > img {
-  width: 100%;
-  max-width: 125px;
-  height: auto;
 }
