--- a/style.css
+++ b/style.css
@@ -44,6 +44,14 @@ header {
 		justify-content: space-around !important; /*space-between;*/
 	}
 }
+
+.textlegende {
+    background-color: #f0f0f0;
+    color: #333;
+    font-size: 14px;
+    padding: 5px;
+}
+
 .badge {
 	background-color: #eee;
 	color: #666;
@@ -131,4 +139,5 @@ margin-bottom: 10px;
 	color: #666;
 	padding: 5px 10px;
 }
+
 
