--- a/style.css
+++ b/style.css
@@ -16,6 +16,12 @@ body {
 main {
 	padding: 0 20px 20px 20px;
 }
+/*@media (orientation: portrait) {
+	body {
+		width: 100%;
+		max-width: none;
+	}
+}*/
 
 hr {
 	border-style: outset;
@@ -38,19 +44,6 @@ header {
 	font-size: 14px;
 	margin-top: 8px;
 }
-@media (min-width: 900px) {
-	#legende {
-		flex-direction: row !important;
-		justify-content: space-around !important; /*space-between;*/
-	}
-}
-
-.textlegende {
-    background-color: #f0f0f0;
-    color: #333;
-    font-size: 14px;
-    padding: 5px;
-}
 
 .badge {
 	background-color: #eee;
@@ -61,34 +54,56 @@ header {
 
 .card {
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
 	border-top: solid 1px #777;
 	margin-top: 10px;
-margin-bottom: 10px;
 	padding: 10px 0;
 }
 
+.poster-classification {
+	display: flex;
+	flex-direction: row;
+}
 .poster {
-	width: 135px;
 	padding: 5px 15px 0 0;
 }
 .poster > img {
 	width: 125px;
 }
-
-.classification-image {
-    display: block;
-    margin-top: 10px;
-margin-bottom: 10px;
-    max-width: 135px;
-    height: auto;
-    border-radius: 4px;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
-    float: left; /* Alignement à gauche */
+.classification > img {
+	margin-top: 5px;
+	height: auto;
+	border-radius: 4px;
+	box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
 }
 
 h1 {
-	margin: 0;
+	margin: 10px 0 0 0;
+}
+
+@media (min-width: 900px), (orientation: landscape) {
+	#legende {
+		flex-direction: row !important;
+		justify-content: space-around !important; /*space-between;*/
+	}
+
+	.card {
+		flex-direction: row !important;
+	}
+	.poster-classification {
+		flex-direction: column !important;
+	}
+	.poster {
+		width: 135px;
+	}
+	.classification > img {
+		margin-top: 10px !important;
+		max-width: 125px;
+	}
+
+	h1 {
+		margin: 0 !important;
+	}
 }
 
 .rating {
@@ -99,11 +114,18 @@ h1 {
 	font-size: 14px;
 }
 
+.classification-details {
+	white-space: break-spaces;
+	margin: 15px 0 5px 0;
+	font-size: 14px;
+	background-color: #eee;
+}
+
 .synopsis {
 	white-space: break-spaces;
 	margin: 15px 0 5px 0;
 	text-align: justify;
-	font-size: 12px;
+	font-size: 14px;
 }
 
 .seances {
@@ -116,7 +138,6 @@ h1 {
 	font-weight: bold;
 	color: #000;
 	margin-top: 10px;
-margin-bottom: 10px;
 	margin-bottom: 5px;
 }
 
@@ -139,5 +160,3 @@ margin-bottom: 10px;
 	color: #666;
 	padding: 5px 10px;
 }
-
-
