--- a/style.css
+++ b/style.css
@@ -45,6 +45,13 @@ header {
 	margin-top: 8px;
 }
 
+.textlegende {
+    background-color: #f0f0f0;
+    color: #333;
+    font-size: 14px;
+    padding: 5px;
+}
+
 .badge {
 	background-color: #eee;
 	color: #666;
@@ -160,3 +167,4 @@ h1 {
 	color: #666;
 	padding: 5px 10px;
 }
+
