--- a/style.css
+++ b/style.css
@@ -125,6 +125,13 @@ margin-bottom: 10px;
 	margin-bottom: 5px;
 }
 
+.jour-label.aujourd-hui {
+  background-color: #fffae6;
+  border-left: 5px solid #f5b400;
+  padding: 8px;
+  font-weight: bold;
+}
+
 .horaires {
 	display: flex;
 	flex-direction: row;
@@ -144,6 +151,7 @@ margin-bottom: 10px;
 	color: #666;
 	padding: 5px 10px;
 }
+
 
 
 
