--- a/style.css
+++ b/style.css
@@ -126,8 +126,8 @@ margin-bottom: 10px;
 }
 
 .jour-label.aujourd-hui {
-  background-color: #fffae6;
-  border-left: 5px solid #f5b400;
+  background-color: #e6f0ff;
+  border-left: 5px solid #0055ff;
   padding: 8px;
   font-weight: bold;
 }
@@ -151,6 +151,7 @@ margin-bottom: 10px;
 	color: #666;
 	padding: 5px 10px;
 }
+
 
 
 
