--- a/style.css
+++ b/style.css
@@ -127,9 +127,13 @@ margin-bottom: 10px;
 
 .jour-label.aujourd-hui {
   background-color: #e6ffe6;      /* vert très pâle */
-  border-left: 5px solid #2ecc71; /* vert vif type "success" */
+  border-left: 5px solid #2ecc71; /* vert vif */
   padding: 8px;
   font-weight: bold;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  animation: pulse 1.5s ease-in-out;
 }
 
 .horaires {
@@ -151,6 +155,7 @@ margin-bottom: 10px;
 	color: #666;
 	padding: 5px 10px;
 }
+
 
 
 
