--- a/style.css
+++ b/style.css
@@ -126,13 +126,13 @@ margin-bottom: 10px;
 }
 
 .jour-label.aujourd-hui {
-  background-color: #f9fff9;        /* vert ultra pâle, presque blanc */
-  border-left: 5px solid #14532d;   /* vert très foncé */
-  padding: 8px;
+  display: inline-block;
+  background-color: #f3fff3;           /* vert très pâle, presque blanc */
+  border-left: 5px solid #8bcf9e;      /* vert doux, plus clair */
+  border-right: 5px solid #8bcf9e;
+  padding: 4px 8px;
   font-weight: bold;
-  display: flex;
-  align-items: center;
-  gap: 10px;
+  border-radius: 4px;
 }
 
 .horaires {
@@ -154,6 +154,7 @@ margin-bottom: 10px;
 	color: #666;
 	padding: 5px 10px;
 }
+
 
 
 
