--- a/style.css
+++ b/style.css
@@ -45,18 +45,20 @@ header {
 	}
 }
 
+.badge {
+	background-color: #000eee;
+	color: #000666;
+	padding: 2px 5px;
+	margin-right: 5px;
+}
+
 .textlegende {
     background-color: #f0f0f0;
     color: #333;
+	border-left: 5px solid #000666;      /* vert doux, plus clair */
+    border-right: 5px solid #000666;
     font-size: 14px;
     padding: 5px;
-}
-
-.badge {
-	background-color: #eee;
-	color: #666;
-	padding: 2px 5px;
-	margin-right: 5px;
 }
 
 .card {
@@ -154,6 +156,7 @@ margin-bottom: 10px;
 	color: #666;
 	padding: 5px 10px;
 }
+
 
 
 
