--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ header {
 @media (min-width: 900px) {
 	#legende {
 		flex-direction: row !important;
-		justify-content: space-around !important; /*space-between;*/
+		justify-content: flex-start !important; /*space-between;*/
 		text-align: left;
 	}
 }
@@ -155,6 +155,7 @@ margin-bottom: 10px;
 	color: #666;
 	padding: 5px 10px;
 }
+
 
 
 
