--- a/style.css
+++ b/style.css
@@ -40,10 +40,12 @@ header {
 }
 @media (min-width: 900px) {
 	#legende {
+  	  	display: flex;
 		flex-direction: row !important;
-		justify-content: flex-start !important; /*space-between;*/
-		text-align: left;
-	}
+    	justify-content: space-between !important;
+    	align-items: flex-start;
+    	width: 100%;
+  	}	
 }
 
 .textlegende {
@@ -155,6 +157,7 @@ margin-bottom: 10px;
 	color: #666;
 	padding: 5px 10px;
 }
+
 
 
 
