--- a/style.css
+++ b/style.css
@@ -157,6 +157,35 @@ margin-bottom: 10px;
 	color: #666;
 	padding: 5px 10px;
 }
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modal-content {
+  position: relative;
+  background-color: #000;
+  padding: 10px;
+  border-radius: 8px;
+}
+
+.close {
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  color: white;
+  font-size: 24px;
+  cursor: pointer;
+}
+
 
 
 
