--- a/style.css
+++ b/style.css
@@ -187,17 +187,18 @@ margin-bottom: 10px;
 }
 
 .video-wrapper {
-  position: relative;
-  width: 100%;
-  max-width: 800px;
+  width: 90vw;
+  max-width: 960px;
   aspect-ratio: 16 / 9;
+  margin: auto;
 }
 
-.video-wrapper iframe {
+#trailerFrame {
   width: 100%;
   height: 100%;
   border-radius: 8px;
 }
+
 
 
 
