--- a/style.css
+++ b/style.css
@@ -157,14 +157,14 @@ margin-bottom: 10px;
 	color: #666;
 	padding: 5px 10px;
 }
+
 .modal {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0,0,0,0.8);
-  display: flex;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.8);
   justify-content: center;
   align-items: center;
   z-index: 1000;
@@ -172,18 +172,19 @@ margin-bottom: 10px;
 
 .modal-content {
   position: relative;
+  padding: 1rem;
   background-color: #000;
-  padding: 10px;
-  border-radius: 8px;
+  border-radius: 10px;
 }
 
 .close {
   position: absolute;
-  top: 5px;
-  right: 10px;
+  top: 10px;
+  right: 15px;
+  font-size: 2rem;
   color: white;
-  font-size: 24px;
   cursor: pointer;
+  z-index: 1001;
 }
 
 .video-wrapper {
@@ -198,6 +199,7 @@ margin-bottom: 10px;
   height: 100%;
   border-radius: 8px;
 }
+
 
 
 
