--- a/style.css
+++ b/style.css
@@ -138,6 +138,14 @@ h1 {
   border-radius: 4px;
 }
 
+.jour-block.encadre-aujourd-hui {
+  background-color: #f3fff3; /* même vert pâle que le label */
+  border: 2px solid #8bcf9e; /* contour vert doux */
+  border-radius: 6px;
+  padding: 10px;
+  margin-bottom: 20px;
+}
+
 .horaires {
 	display: flex;
 	flex-direction: row;
@@ -199,6 +207,7 @@ h1 {
   height: 100%;
   border-radius: 8px;
 }
+
 
 
 
