--- a/style.css
+++ b/style.css
@@ -158,6 +158,38 @@ margin-bottom: 10px;
 	padding: 5px 10px;
 }
 
+.modal {
+  display: none; /* cachée par défaut */
+  position: fixed; /* se place par rapport à la fenêtre */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.8); /* fond semi-transparent */
+  justify-content: center;
+  align-items: center;
+  z-index: 9999; /* au-dessus de tout */
+}
+
+.modal-content {
+  position: relative;
+  max-width: 80%;
+  background: #000;
+}
+
+.video-wrapper {
+  position: relative;
+  padding-bottom: 56.25%; /* ratio 16:9 */
+  height: 0;
+}
+
+.video-wrapper iframe {
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+}
+
+
 
 
 
