--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ h1 {
   border-radius: 5px;
   color: #000;
   margin-bottom: 10px;
-  font-weight: bold;
+  font-weight: normal;
 }
 
 .synopsis {
@@ -128,7 +128,7 @@ h1 {
 	font-weight: bold;
 	color: #000;
 	margin-top: 10px;
-margin-bottom: 10px;
+	margin-bottom: 10px;
 	margin-bottom: 5px;
 }
 
@@ -203,6 +203,7 @@ margin-bottom: 10px;
   height: 100%;
   border-radius: 8px;
 }
+
 
 
 
