--- a/style.css
+++ b/style.css
@@ -99,7 +99,9 @@ h1 {
 }
 .rating,
 .content {
-	font-size: 14px;
+	font-size: 14px;	
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 .classification-details {
@@ -203,6 +205,7 @@ h1 {
   height: 100%;
   border-radius: 8px;
 }
+
 
 
 
