--- a/style.css
+++ b/style.css
@@ -109,6 +109,7 @@ h1 {
   padding: 5px;
   border-radius: 1px;
   color: #000;
+  margin-top: 12px;
   margin-bottom: 5px;
   font-weight: normal;
 }
@@ -205,6 +206,7 @@ h1 {
   height: 100%;
   border-radius: 8px;
 }
+
 
 
 
