--- a/style.css
+++ b/style.css
@@ -152,6 +152,7 @@ h1 {
 
 .horaires {
 	display: flex;
+	align-items: center; /* ✅ centre verticalement */
 	flex-direction: row;
 	flex-wrap: wrap;
 	gap: 10px;
@@ -168,6 +169,7 @@ h1 {
 	background-color: #eee;
 	color: #666;
 	padding: 5px 10px;
+	border-radius: 0; /* coins carrés */
 }
 
 .modal {
@@ -211,6 +213,7 @@ h1 {
   height: 100%;
   border-radius: 8px;
 }
+
 
 
 
