--- a/style.css
+++ b/style.css
@@ -32,12 +32,14 @@ header {
 	margin-top: 3px;
 	margin-bottom: 8px;
 }
+
 #legende {
-	display: flex;
-	flex-direction: column;
-	font-size: 14px;
-	margin-top: 8px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 10px;
+    margin-top: 12px;
 }
+
 @media (min-width: 900px) {
 	#legende {
   	  	display: flex;
@@ -213,6 +215,7 @@ h1 {
   height: 100%;
   border-radius: 8px;
 }
+
 
 
 
