--- a/style.css
+++ b/style.css
@@ -251,16 +251,17 @@ h1 {
 }
 
 .section-title {
-  margin-top: 40px;
-  margin-bottom: 0px;
-  font-size: 1.4rem;
-  font-weight: 700;
-  color: #003366;
-  text-align: center;
-  padding-bottom: 8px;
-  text-transform: uppercase;
-  letter-spacing: 1px;
+  background-color: #e6f2ff;      /* bleu pâle */
+  color: #003366;                 /* bleu foncé pour le texte */
+  padding: 0.5em 1em;              /* espace intérieur */
+  margin: 2em 0 1em 0;             /* espace autour (haut, droite, bas, gauche) */
+  border-top: 3px solid #99ccff;   /* ligne au-dessus */
+  font-size: 1.4em;
+  font-weight: bold;
+  text-transform: uppercase;       /* tout en majuscules */
 }
+
+
 
 
 
