--- a/style.css
+++ b/style.css
@@ -222,14 +222,15 @@ h1 {
 
 .bientot-affiche-banner {
   display: inline-block;
-  background-color: #eeeeee;           /* gris pâle comme les attributs */
-  border-left: 5px solid #cccccc;      /* gris doux */
+  background-color: #eeeeee;
+  border-left: 5px solid #cccccc;
   border-right: 5px solid #cccccc;
   padding: 4px 8px;
   font-weight: bold;
   border-radius: 4px;
   margin: 8px 0;
 }
+
 .bientot-affiche-banner .side-bar {
   display: inline-block;
   width: 8px;
@@ -243,6 +244,7 @@ h1 {
   display: inline-block;
   vertical-align: middle;
 }
+
 
 
 
