--- a/style.css
+++ b/style.css
@@ -231,6 +231,7 @@ h1 {
   color: #000;                         /* texte noir */
   white-space: nowrap;                /* empêche le retour à la ligne */
   margin: 10px 0 0 0;                 /* top: 10px, bottom: 0, left/right: 0 */
+  max-width: max-content;  
 }
 
 .banner-text {
@@ -238,6 +239,7 @@ h1 {
   vertical-align: middle;
   text-align: left;
 }
+
 
 
 
