--- a/style.css
+++ b/style.css
@@ -221,7 +221,7 @@ h1 {
 
 .bientot-affiche-banner {
   display: inline-block;
-  background-color: #e0e0e0;           /* gris clair */
+  background-color: #eee;           /* gris clair */
   border-left: 5px solid #666;         /* gris moyen */
   border-right: 5px solid #666;
   padding: 4px 8px;
@@ -238,6 +238,7 @@ h1 {
   vertical-align: middle;
   text-align: left;
 }
+
 
 
 
