--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ header {
     color: #333;
     font-size: 14px;
     padding: 5px;
+	display: inline-block;
 }
 
 .badge {
@@ -238,6 +239,7 @@ h1 {
   vertical-align: middle;
   text-align: left;
 }
+
 
 
 
