--- a/style.css
+++ b/style.css
@@ -34,10 +34,9 @@ header {
 }
 
 #legende {
-    display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 10px;
-    margin-top: 12px;
+    margin-top: 10px;
 }
 
 @media (min-width: 900px) {
@@ -71,7 +70,7 @@ p.textlegende {
     overflow: hidden;          /* ← masque le débordement */
     font-size: 14px;
     padding: 5px 5px;
-    margin: 5px 0;
+    margin: 0 0;
     box-sizing: border-box;
     border-radius: 4px;
 	width: auto;
@@ -264,6 +263,7 @@ h1 {
   vertical-align: middle;
   text-align: left;
 }
+
 
 
 
