--- a/style.css
+++ b/style.css
@@ -199,6 +199,7 @@ h1 {
 	color: #666;
 	padding: 5px 5px;
 	border-radius: 0; /* coins carrés */
+	vertical-align: middle;
 }
 
 .modal {
@@ -262,6 +263,7 @@ h1 {
   vertical-align: middle;
   text-align: left;
 }
+
 
 
 
