--- a/style.css
+++ b/style.css
@@ -152,10 +152,10 @@ h1 {
 }
 
 .synopsis {
-	white-space: break-spaces;
-	margin: 15px 0 15px 0;
-	text-align: justify;
-	font-size: 12px;
+    white-space: normal;
+    margin: 15px 0;
+    text-align: justify;
+    font-size: 12px;
 }
 
 .seances {
@@ -266,6 +266,7 @@ h1 {
   vertical-align: middle;
   text-align: left;
 }
+
 
 
 
