--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ p.textlegende {
 }
 
 h1 {
-	margin: 0;
+    margin: 0 5px 0 0; /* haut, droite, bas, gauche */
 }
 
 .rating {
@@ -153,7 +153,7 @@ h1 {
 
 .synopsis {
     white-space: pre-wrap;
-    margin: 15px 0;
+    margin: 0 5px 0 0; /* haut, droite, bas, gauche */
     text-align: justify;
     font-size: 12px;
 }
@@ -266,6 +266,7 @@ h1 {
   vertical-align: middle;
   text-align: left;
 }
+
 
 
 
