--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ p.textlegende {
 	margin-top: 10px;
 	margin-bottom: 10px;
 	padding: 10px 0;
+	white-space: normal;        /* permet les retours à la ligne */
 }
 
 .poster {
@@ -275,6 +276,7 @@ h1 {
   vertical-align: middle;
   text-align: left;
 }
+
 
 
 
