--- a/style.css
+++ b/style.css
@@ -136,6 +136,7 @@ p.textlegende {
 }
 
 h1 {
+	font-size: clamp(18px, 5vw, 32px); /* taille fluide entre 18px et 32px */
     margin: 0 5px 0 0; /* haut, droite, bas, gauche */
 }
 
@@ -163,7 +164,7 @@ h1 {
 
 .synopsis {
     white-space: pre-wrap;
-    margin: 10px 0 10px 0; /* haut, droite, bas, gauche */
+    margin: 15px 0 15px 0; /* haut, droite, bas, gauche */
     text-align: justify;
     font-size: 12px;
 }
@@ -276,6 +277,7 @@ h1 {
   vertical-align: middle;
   text-align: left;
 }
+
 
 
 
